add map markers demo

--- a/index.html
+++ b/index.html
@@ -2,617 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>furkot</title>
-	<link rel="stylesheet" href="furkot.css">
+	<title>furkot icon fonts</title>
 	<style>
 		body {
 			font-family: sans-serif;
 			margin: 0;
 			padding: 10px 20px;
 		}
-
-		.preview {
-			display: inline-block;
-			margin: 3px;
-			text-align: center;
-		}
-
-		.preview__icon {
-			box-sizing: border-box;
-			display: block;
-			width: 58px;
-			height: 58px;
-			font-size: 32px;
-			background-color: rgba(0, 0, 0, .05);
-			color: chocolate;
-			line-height: 2;
-		}
-
-		.preview__label {
-			font-size: 10px;
-			display: inline-block;
-			max-width: 58px;
-			overflow: hidden;
-			white-space: nowrap;
-		}
-
-		.icon {
-			display: inline-block;
-			font-size: 16px;
-		}
 	</style>
 </head>
 <body>
-	<h1>furkot</h1>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-bypass"></span>
-		</span>
-		<span class="preview__label">bypass</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-calendar-warning"></span>
-		</span>
-		<span class="preview__label">calendar-warning</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-calendar"></span>
-		</span>
-		<span class="preview__label">calendar</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-car"></span>
-		</span>
-		<span class="preview__label">car</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-foursquare"></span>
-		</span>
-		<span class="preview__label">foursquare</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-freeway"></span>
-		</span>
-		<span class="preview__label">freeway</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-fuel"></span>
-		</span>
-		<span class="preview__label">fuel</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-hotel-roof"></span>
-		</span>
-		<span class="preview__label">hotel-roof</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-hotel"></span>
-		</span>
-		<span class="preview__label">hotel</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-arrow-down"></span>
-		</span>
-		<span class="preview__label">arrow-down</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-arrow-left"></span>
-		</span>
-		<span class="preview__label">arrow-left</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-arrow-up"></span>
-		</span>
-		<span class="preview__label">arrow-up</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-blocked"></span>
-		</span>
-		<span class="preview__label">blocked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-book"></span>
-		</span>
-		<span class="preview__label">book</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-box-add"></span>
-		</span>
-		<span class="preview__label">box-add</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-box-remove"></span>
-		</span>
-		<span class="preview__label">box-remove</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-bubbles-2"></span>
-		</span>
-		<span class="preview__label">bubbles-2</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-bubbles"></span>
-		</span>
-		<span class="preview__label">bubbles</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-cart"></span>
-		</span>
-		<span class="preview__label">cart</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-checkbox-checked"></span>
-		</span>
-		<span class="preview__label">checkbox-checked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-checkbox-unchecked"></span>
-		</span>
-		<span class="preview__label">checkbox-unchecked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-checkmark"></span>
-		</span>
-		<span class="preview__label">checkmark</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-clock"></span>
-		</span>
-		<span class="preview__label">clock</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-close"></span>
-		</span>
-		<span class="preview__label">close</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-code"></span>
-		</span>
-		<span class="preview__label">code</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-cog"></span>
-		</span>
-		<span class="preview__label">cog</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-compass"></span>
-		</span>
-		<span class="preview__label">compass</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-contract"></span>
-		</span>
-		<span class="preview__label">contract</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-copy"></span>
-		</span>
-		<span class="preview__label">copy</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-earth"></span>
-		</span>
-		<span class="preview__label">earth</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-eject"></span>
-		</span>
-		<span class="preview__label">eject</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-envelop"></span>
-		</span>
-		<span class="preview__label">envelop</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-expand"></span>
-		</span>
-		<span class="preview__label">expand</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-eye-blocked"></span>
-		</span>
-		<span class="preview__label">eye-blocked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-eye"></span>
-		</span>
-		<span class="preview__label">eye</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-facebook-2"></span>
-		</span>
-		<span class="preview__label">facebook-2</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-facebook"></span>
-		</span>
-		<span class="preview__label">facebook</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-feed"></span>
-		</span>
-		<span class="preview__label">feed</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-file"></span>
-		</span>
-		<span class="preview__label">file</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-film"></span>
-		</span>
-		<span class="preview__label">film</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-flag"></span>
-		</span>
-		<span class="preview__label">flag</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-food"></span>
-		</span>
-		<span class="preview__label">food</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-google-plus-2"></span>
-		</span>
-		<span class="preview__label">google-plus-2</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-google-plus"></span>
-		</span>
-		<span class="preview__label">google-plus</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-heart"></span>
-		</span>
-		<span class="preview__label">heart</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-home"></span>
-		</span>
-		<span class="preview__label">home</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-info"></span>
-		</span>
-		<span class="preview__label">info</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-location-2"></span>
-		</span>
-		<span class="preview__label">location-2</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-location"></span>
-		</span>
-		<span class="preview__label">location</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-lock-2"></span>
-		</span>
-		<span class="preview__label">lock-2</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-lock"></span>
-		</span>
-		<span class="preview__label">lock</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-loop-2"></span>
-		</span>
-		<span class="preview__label">loop-2</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-loop-3"></span>
-		</span>
-		<span class="preview__label">loop-3</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-loop"></span>
-		</span>
-		<span class="preview__label">loop</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-minus"></span>
-		</span>
-		<span class="preview__label">minus</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-mobile"></span>
-		</span>
-		<span class="preview__label">mobile</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-new-tab"></span>
-		</span>
-		<span class="preview__label">new-tab</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-notebook"></span>
-		</span>
-		<span class="preview__label">notebook</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-office"></span>
-		</span>
-		<span class="preview__label">office</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-pencil"></span>
-		</span>
-		<span class="preview__label">pencil</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-plus"></span>
-		</span>
-		<span class="preview__label">plus</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-print"></span>
-		</span>
-		<span class="preview__label">print</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-pushpin"></span>
-		</span>
-		<span class="preview__label">pushpin</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-radio-checked"></span>
-		</span>
-		<span class="preview__label">radio-checked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-radio-unchecked"></span>
-		</span>
-		<span class="preview__label">radio-unchecked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-redo"></span>
-		</span>
-		<span class="preview__label">redo</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-remove"></span>
-		</span>
-		<span class="preview__label">remove</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-search"></span>
-		</span>
-		<span class="preview__label">search</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-share"></span>
-		</span>
-		<span class="preview__label">share</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-smiley"></span>
-		</span>
-		<span class="preview__label">smiley</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-star"></span>
-		</span>
-		<span class="preview__label">star</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-switch"></span>
-		</span>
-		<span class="preview__label">switch</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-tab"></span>
-		</span>
-		<span class="preview__label">tab</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-tags"></span>
-		</span>
-		<span class="preview__label">tags</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-twitter"></span>
-		</span>
-		<span class="preview__label">twitter</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-undo"></span>
-		</span>
-		<span class="preview__label">undo</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-unlocked"></span>
-		</span>
-		<span class="preview__label">unlocked</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-user"></span>
-		</span>
-		<span class="preview__label">user</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-users"></span>
-		</span>
-		<span class="preview__label">users</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-warning"></span>
-		</span>
-		<span class="preview__label">warning</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-cloudy"></span>
-		</span>
-		<span class="preview__label">cloudy</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-one-way"></span>
-		</span>
-		<span class="preview__label">one-way</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-phone"></span>
-		</span>
-		<span class="preview__label">phone</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-pin-flag"></span>
-		</span>
-		<span class="preview__label">pin-flag</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-reverse"></span>
-		</span>
-		<span class="preview__label">reverse</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-road"></span>
-		</span>
-		<span class="preview__label">road</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-round"></span>
-		</span>
-		<span class="preview__label">round</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-enter"></span>
-		</span>
-		<span class="preview__label">enter</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-exit"></span>
-		</span>
-		<span class="preview__label">exit</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-icons"></span>
-		</span>
-		<span class="preview__label">icons</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-list"></span>
-		</span>
-		<span class="preview__label">list</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-start"></span>
-		</span>
-		<span class="preview__label">start</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-stop"></span>
-		</span>
-		<span class="preview__label">stop</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-ticket"></span>
-		</span>
-		<span class="preview__label">ticket</span>
-	</div>
-	<div class="preview">
-		<span class="preview__icon">
-			<span class="ff-icon-tripit"></span>
-		</span>
-		<span class="preview__label">tripit</span>
-	</div>
+  <ul>
+    <li><a href='build/furkot.html'>Click to see UI icons</a></li>
+    <li><a href='build/marker.html'>Click to see map icons</a></li>
+  </ul>
 </body>
 </html>
