--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 <body>
   <ul>
-    <li><a href='build/furkot.html'>Click to see UI icons</a></li>
-    <li><a href='build/marker.html'>Click to see map icons</a></li>
+    <li><a href='build/furkot.html'>Click to see furkot icons</a></li>
   </ul>
 </body>
 </html>
