add sprites demo
also update demo for icon fonts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <ul>
     <li><a href='build/furkot.html'>Click to see furkot icons</a></li>
+    <li><a href='build/sprite-streets.html'>Click to see furkot map sprites</a></li>
   </ul>
 </body>
 </html>
